Display welcome-page, jokes, memes and gifs without design

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Sad? Come here!</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <p>Hello</p>
-
+    <h1>Приветствие</h1>
+    <div>Чтобы развеселиться, введи в поисковой строке параметр интересующего:</div>
+    <ul>
+        <li>рандомная шутка: <code>/jokes</code></li>
+        <li>рандомный мем: <code>/memes</code></li>
+        <li>рандомная гифка: <code>/gif</code></li>
+    </ul>
 </body>
 </html>
